# gmail-mcp-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  config.rs  gmail.rs  http.rs  main.rs  mcp.rs  tokens.rs
