[package]
name = "gmail-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "A dependency-minimal, read-only Gmail MCP server with multi-account support"
license = "MIT"
repository = "https://github.com/appler1009/gmail-mcp-rs"
authors = ["Appler"]
keywords = ["gmail", "mcp", "model-context-protocol"]
categories = ["command-line-utilities"]

[[bin]]
name = "gmail-mcp"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
native-tls = "0.2"
